updates from debug branch